tests/integration/cli/tests/snapshots/snapshot__snapshot_exit_1_from_worker.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 1318
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_exit_1_from_worker",
    "use_packages": [],
    "include_webcs": [],
    "cli_args": [],
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "",
      "stderr": "",
      "exit_code": 1
    }
  }
}
