tests/integration/cli/tests/snapshots/snapshot__snapshot_fork.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": null,
    "wasm_hash": "b1a423809f6a0ff526c3daf76024f39f",
    "use_packages": [
      "sharrattj/coreutils"
    ],
    "cli_args": [],
    "stdin": null,
    "debug_output": false,
    "enable_threads": true
  },
  "result": {
    "Success": {
      "stdout": "Parent has x = 0\nChild has x = 2\nChild(2) exited with 0\n",
      "stderr": "",
      "exit_code": 0
    }
  }
}
