tests/integration/cli/tests/snapshots/snapshot__snapshot_fork_and_exec.snap
---
source: tests/integration/cli/tests/snapshot.rs
assertion_line: 780
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_fork_and_exec",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [],
    "enable_threads": true,
    "enable_network": false
  },
  "result": {
    "Success": {
      "stdout": "Main program started\nhi-from-child\nhi-from-parent\n",
      "stderr": "Child(2) exited with 0\nexecve: echo hi-from-parent\n",
      "exit_code": 0
    }
  }
}
