tests/integration/cli/tests/snapshots/snapshot__snapshot_fork_and_exec_async.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_fork_and_exec_async",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [],
    "enable_threads": true,
    "enable_network": false,
    "enable_async_entrypoint": true
  },
  "result": {
    "Success": {
      "stdout": "Main program started\nexecve: echo hi-from-child\nhi-from-child\nhi-from-parent\n",
      "stderr": "Child(2) exited with 0\nexecve: echo hi-from-parent\n",
      "exit_code": 0
    }
  }
}
