tests/integration/cli/tests/snapshots/snapshot__snapshot_fork_async.snap
---
source: tests/integration/cli/tests/snapshot.rs
expression: snapshot
---
{
  "spec": {
    "name": "snapshot::test_snapshot_fork_async",
    "use_packages": [
      "wasmer/coreutils"
    ],
    "include_webcs": [],
    "cli_args": [],
    "enable_threads": true,
    "enable_network": false,
    "enable_async_entrypoint": true
  },
  "result": {
    "Success": {
      "stdout": "Parent has x = 0\nParent memory is good\nChild(2) exited with 3\n",
      "stderr": "Child has x = 2\nChild memory is good\n",
      "exit_code": 0
    }
  }
}
